--- a/index.html
+++ b/index.html
@@ -107,65 +107,71 @@
         </section>
         <section class="fetured container">
             <div class="fetured__title">
-                <h1 class="fetured__title--header">Fetured Items</h1>
-                <p class="fetured__title--text">Shop for items based on what we featured in this week</p>
+                <h1 class="fetured__title__header">Fetured Items</h1>
+                <p class="fetured__title__text">Shop for items based on what we featured in this week</p>
             </div>
             <ul class="fetured__list">
                 <h2 class="visually-hidden">Fetured</h2>
-                <li class="fetured__list--items">
-                    <img class="fetured__title--image" src="./img/Rectangle 15 copy.jpg" alt="ELLERY X M'O CAPSULE"
-                        width="360" height="420">
-                    <h3 class="fetured__title--name">ELLERY X M'O CAPSULE</h3>
-                    <p class="fetured__title--text">Known for her sculptural takes on traditional tailoring,
+                <li class="fetured__list__items">
+                    <img class="fetured__list__items--image" src="./img/Rectangle 15 copy.jpg"
+                        alt="ELLERY X M'O CAPSULE" width="360" height="420">
+                    <h3 class="fetured__list__items--name">ELLERY X M'O CAPSULE</h3>
+                    <p class="fetured__list__items--text">Known for her sculptural takes on traditional
+                        tailoring,
                         Australian
                         arbiter of cool Kym Ellery
                         teams up with Moda Operandi.</p>
-                    <p class="fetured__title--price">$52.00</p>
+                    <p class="fetured__list__items--price">$52.00</p>
                 </li>
-                <li class="fetured__list--items">
-                    <img class="fetured__title--image" src="./img/Rectangle 15 copy(1).jpg" alt="ELLERY X M'O CAPSULE"
+                <li class="fetured__list__items">
+                    <img class="fetured__list__items--image" src="./img/Rectangle 15 copy(1).jpg"
+                        alt="ELLERY X M'O CAPSULE" width="360" height="420">
+                    <h3 class="fetured__list__items--name">ELLERY X M'O CAPSULE</h3>
+                    <p class="fetured__list__items--text">Known for her sculptural takes on traditional
+                        tailoring, Australian
+                        arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p class="fetured__list__items--price">$52.00</p>
+                </li>
+                <li class="fetured__list__items">
+                    <img class="fetured__list__items--image" src="./img/Rectangle 15 copy(2).jpg"
+                        alt="ELLERY X M'O CAPSULE" width="360" height="420">
+                    <h3 class="fetured__list__items--name">ELLERY X M'O CAPSULE</h3>
+                    <p class="fetured__list__items--text">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p class="fetured__list__items--price">$52.00</p>
+                </li>
+                <li class="fetured__list__items">
+                    <img class="fetured__list__items--image" src="./img/Rectangle 15 copy(3).jpg"
+                        alt="ELLERY X M'O CAPSULE" width="360" height="420">
+                    <h3 class="fetured__list__items--name">ELLERY X M'O CAPSULE</h3>
+                    <p class="fetured__list__items--text"> Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p class="fetured__list__items--price">$52.00</p>
+                </li>
+                <li class="fetured__list__items">
+                    <img class="fetured__list__items--image" src="./img/Rectangle 15 copy(4).jpg"
+                        alt=" ELLERY X M'O CAPSULE" width="360" height="420">
+                    <h3 class="fetured__list__items--name"> ELLERY X M'O CAPSULE</h3>
+                    <p class="fetured__list__items--text">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p class="fetured__list__items--price">$52.00</p>
+                </li>
+                <li class="fetured__list__items">
+                    <img class="fetured__list__items--image" src="./img/Image.jpg" alt="ELLERY X M'O CAPSULE"
                         width="360" height="420">
-                    <h3 class="fetured__title--name">ELLERY X M'O CAPSULE</h3>
-                    <p class="fetured__title--text">Known for her sculptural takes on traditional tailoring, Australian
+                    <h3 class="fetured__list__items--name">ELLERY X M'O CAPSULE</h3>
+                    <p class="fetured__list__items--text">Known for her sculptural takes on traditional tailoring,
+                        Australian
                         arbiter of cool Kym Ellery
                         teams up with Moda Operandi.</p>
-                    <p class="fetured__title--price">$52.00</p>
-                </li>
-                <li class="fetured__list--items">
-                    <img class="fetured__title--image" src="./img/Rectangle 15 copy(2).jpg" alt="ELLERY X M'O CAPSULE"
-                        width="360" height="420">
-                    <h3 class="fetured__title--name">ELLERY X M'O CAPSULE</h3>
-                    <p class="fetured__title--text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p class="fetured__title--price">$52.00</p>
-                </li>
-                <li class="fetured__list--items">
-                    <img class="fetured__title--image" src="./img/Rectangle 15 copy(3).jpg" alt="ELLERY X M'O CAPSULE"
-                        width="360" height="420">
-                    <h3 class="fetured__title--name">ELLERY X M'O CAPSULE</h3>
-                    <p class="fetured__title--text"> Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p class="fetured__title--price">$52.00</p>
-                </li>
-                <li class="fetured__list--items">
-                    <img class="fetured__title--image" src="./img/Rectangle 15 copy(4).jpg" alt=" ELLERY X M'O CAPSULE"
-                        width="360" height="420">
-                    <h3 class="fetured__title--name"> ELLERY X M'O CAPSULE</h3>
-                    <p class="fetured__title--text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p class="fetured__title--price">$52.00</p>
-                </li>
-                <li class="fetured__list--items">
-                    <img class="fetured__title--image" src="./img/Image.jpg" alt="ELLERY X M'O CAPSULE" width="360"
-                        height="420">
-                    <h3 class="fetured__title--name">ELLERY X M'O CAPSULE</h3>
-                    <p class="fetured__title--text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p class="fetured__title--price">$52.00</p>
+                    <p class="fetured__list__items--price">$52.00</p>
                 </li>
             </ul>
         </section>
