--- a/index.html
+++ b/index.html
@@ -175,14 +175,72 @@
                 </li>
             </ul>
         </section>
-        <button>
-            <p>Browse All Product</p>
+        <button class="button-product">
+            <p class="button-product--text">Browse All Product</p>
         </button>
+        <section class="advantages">
+            <h2 class="visually-hidden">advantages</h2>
+            <ul class="advantages__list container">
+                <h2 class="visually-hidden">advantages</h2>
+                <il class="advantages__list__items">
+                    <img class="advantages__list__items--image" src="./img/car.svg" alt="auto" width="45" height="32">
+                    <h3 class="advantages__list__items--header">Free Delivery</h3>
+                    <p class="advantages__list__items--text">Worldwide delivery on all. Authorit tively morph
+                        next-generation innov tion with extensive
+                        models.
+                    </p>
+                </il>
+                <il class="advantages__list__items">
+                    <img class="advantages__list__items--image" src="./img/percent.svg" alt="discounts" width="40"
+                        height="40">
+                    <h3 class="advantages__list__items--header">Sales & discounts</h3>
+                    <p class="advantages__list__items--text"> Worldwide delivery on all. Authorit tively morph
+                        next-generation innov tion with extensive
+                        models.
+                    </p>
+                </il>
+                <il class="advantages__list__items">
+                    <img class="advantages__list__items--image" src="./img/corona.svg" alt="assurance" width="47"
+                        height="35">
+                    <h3 class="advantages__list__items--header">Quality assurance</h3>
+                    <p class="advantages__list__items--text">Worldwide delivery on all. Authorit tively morph
+                        next-generation innov tion with extensive
+                        models.
+                    </p>
+                </il>
+            </ul>
         </section>
-        <h2 class="visually-hidden">advantages</h2>
-        <section>
     </main>
-
+    <footer>
+        <section>
+            <h1 class="visually-hidden">subscription</h1>
+            <div class="subscription-title">
+                <img src="" alt="">
+                <p>Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum</p>
+            </div>
+            <div class="subscription-form">
+                <p>SUBSCRIBE FOR OUR NEWLETTER AND PROMOTION</p>
+                <input type="text">
+            </div>
+            <div class="contact-list">
+                <h3>© 2021 Brand All Rights Reserved.</h3>
+                <ul>
+                    <il>
+                        <img src="./img/f.svg" alt="facebook" width="32" height="32">
+                    </il>
+                    <il>
+                        <img src="./img/ins.svg" alt="instagram" width="32" height="32">
+                    </il>
+                    <il>
+                        <img src="./img/P.svg" alt="pinterest" width="32" height="32">
+                    </il>
+                    <il>
+                        <img src="./img/bird.svg" alt="mail" width="32" height="32">
+                    </il>
+                </ul>
+            </div>
+        </section>
+    </footer>
 
 </body>
 
