--- a/index.html
+++ b/index.html
@@ -212,18 +212,33 @@
         </section>
     </main>
     <footer>
-        <section>
-            <h2 class="visually-hidden">subscription</h1>
-                <div class="subscription-title">
-                    <img src="" alt="">
-                    <p>Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum</p>
-                </div>
-                <div class="subscription-form">
-                    <p>SUBSCRIBE FOR OUR NEWLETTER AND PROMOTION</p>
-                    <input type="text">
-                </div>
-                <div class="contact-list">
-                    <h3>© 2021 Brand All Rights Reserved.</h3>
+        <section class="subscription">
+            <div class="container">
+                <h2 class="visually-hidden">subscription</h1>
+                    <div class="subscription__wrapper">
+                        <div class="subscription__title">
+                            <img class="subscription__title--foto" src="./img/footer_women.jpg" alt="foto" width="96"
+                                height="96">
+                            <p class="subscription__title--text">Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                                a
+                                pulvinar purus condimentum</p>
+                        </div>
+                        <div class="subscription__form">
+                            <p class="subscription__form--text">SUBSCRIBE<span class="subscription-form--subtext">FOR
+                                    OUR
+                                    NEWLETTER AND PROMOTION</span></p>
+                            <div class="subscription__form--botton">
+                                <input class="form-email" type="email" placeholder="Enter Your Email">
+                                <input class="form-subscribe" type="text" placeholder="Subscribe">
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </section>
+        <section class="footer-contact">
+            <div class="container">
+                <div class="footer-contact__list">
+                    <h3 class="footer-contact__list--text">© 2021 Brand All Rights Reserved.</h3>
                     <ul>
                         <il>
                             <img src="./img/f.svg" alt="facebook" width="32" height="32">
@@ -239,6 +254,7 @@
                         </il>
                     </ul>
                 </div>
+            </div>
         </section>
     </footer>
 
