--- a/index.html
+++ b/index.html
@@ -217,22 +217,26 @@
                 <h2 class="visually-hidden">subscription</h1>
                     <div class="subscription__wrapper">
                         <div class="subscription__title">
-                            <img class="subscription__title--foto" src="./img/footer_women.jpg" alt="foto" width="96"
-                                height="96">
-                            <p class="subscription__title--text">Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                            <img class="subscription__title subscription__title--foto" src="./img/footer_women.jpg"
+                                alt="foto" width="96" height="96">
+                            <p class="subscription__title subscription__title--text">Vestibulum quis porttitor dui!
+                                Quisque viverra nunc mi,
                                 a
                                 pulvinar purus condimentum</p>
                         </div>
-                        <div class="subscription__form">
-                            <p class="subscription__form--text">SUBSCRIBE<span class="subscription-form--subtext">FOR
-                                    OUR
-                                    NEWLETTER AND PROMOTION</span></p>
-                            <div class="subscription__form--botton">
-                                <input class="form-email" type="email" placeholder="Enter Your Email">
-                                <input class="form-subscribe" type="text" placeholder="Subscribe">
-                            </div>
-                        </div>
+                        <form action="#">
+                            <div class="subscription__form">
+                                <p class="subscription__form__text">SUBSCRIBE<span
+                                        class="subscription-form__subtext">FOR
+                                        OUR
+                                        NEWLETTER AND PROMOTION</span></p>
+                                <div class="subscription__form__button">
+                                    <input class="form-email" type="email" placeholder="Enter Your Email"><input
+                                        class="form-subscribe" type="submit" value="Subscribe">
+                                </div>
+                        </form>
                     </div>
+            </div>
             </div>
         </section>
         <section class="footer-contact">
